5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4062/executions/1749_1534.log
== TEST (2019-05-15 18:27:25) 
-- CODE:
from math import*
cont=0
soma=0
x=float(input("num1: "))
k=int(input("num2: "))
while((x>=-1) and (x<=1) and (k>0)):
	soma=soma+cont
	cont=cont+1
	
-- OUTPUT:
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:27:38) 
-- CODE:
from math import*
cont=0
soma=0
x=float(input("num1: "))
k=int(input("num2: "))
while((x>=-1) and (x<=1) and (k>0)):
	soma=soma+cont
	cont=cont+1
	
-- OUTPUT:
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:31:19) 
-- CODE:
from math import*
cont=0
soma=0
x=float(input("num1: "))
k=int(input("num2: "))
while((x>-1) and (x<1) and (k>0)):
	soma=soma+cont
	cont=cont+1
	print(round(arctgh(x),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(arctgh(x),2))
NameError: name 'arctgh' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:31:26) 
-- CODE:
from math import*
cont=0
soma=0
x=float(input("num1: "))
k=int(input("num2: "))
while((x>-1) and (x<1) and (k>0)):
	soma=soma+cont
	cont=cont+1
	print(round(arctgh(x),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(arctgh(x),2))
NameError: name 'arctgh' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:31:33) 
-- CODE:
from math import*
cont=0
soma=0
x=float(input("num1: "))
k=int(input("num2: "))
while((x>-1) and (x<1) and (k>0)):
	soma=soma+cont
	cont=cont+1
print(round(arctgh(x),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(arctgh(x),2))
NameError: name 'arctgh' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:31:39) 
-- CODE:
from math import*
cont=0
soma=0
x=float(input("num1: "))
k=int(input("num2: "))
while((x>-1) and (x<1) and (k>0)):
	soma=soma+cont
	cont=cont+1
print(round(arctgh(x),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(arctgh(x),2))
NameError: name 'arctgh' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:31:51) 
-- CODE:
from math import*
cont=0
soma=0
x=float(input("num1: "))
k=int(input("num2: "))
while((x>-1) and (x<1) and (k>0)):
	soma=soma+cont
	cont=cont+1
print(round(arct(x),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(arctgh(x),2))
NameError: name 'arctgh' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:31:55) 
-- CODE:
from math import*
cont=0
soma=0
x=float(input("num1: "))
k=int(input("num2: "))
while((x>-1) and (x<1) and (k>0)):
	soma=soma+cont
	cont=cont+1
print(round(arct(x),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(arctgh(x),2))
NameError: name 'arctgh' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:39:19) 
-- CODE:
from math import*
cont=0
soma=0
exp=1
x=float(input("num1: "))
k=int(input("num2: "))
while((x>-1) and (x<1) and (k>0)):
	soma=soma+cont
	cont=cont+1
	exp=exp+2
	a=x**exp/exp
	print(round(a, 7))
-- OUTPUT:
0.2349897
0.1116812
0.0631876
0.0389285
0.0252288
0.0169093
0.011608
0.008113
0.0057499
0.0041207
0.0029802
0.0021718
0.0015928
0.0011747
0.0008704
0.0006477
0.0004837
0.0003624
0.0002724
0.0002052
0.000155
0.0001173
8.9e-05
6.76e-05
5.14e-05
3.92e-05
2.99e-05
2.29e-05
1.75e-05
1.34e-05
1.03e-05
7.9e-06
6.1e-06
4.7e-06
3.6e-06
2.8e-06
2.1e-06
1.6e-06
1.3e-06
1e-06
8e-07
6e-07
5e-07
4e-07
3e-07
2e-07
2e-07
1e-07
1e-07
1e-07
1e-07
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:41:32) 
-- CODE:
from math import*
cont=0
soma=0
exp=1
x=float(input("num1: "))
k=int(input("num2: "))
while((x>-1) and (x<1) and (k>0)):
	soma=soma+cont
	cont=cont+1
	exp=exp+2
	a=x**exp/exp
	
	
-- OUTPUT:
0.2349897
0.1116812
0.0631876
0.0389285
0.0252288
0.0169093
0.011608
0.008113
0.0057499
0.0041207
0.0029802
0.0021718
0.0015928
0.0011747
0.0008704
0.0006477
0.0004837
0.0003624
0.0002724
0.0002052
0.000155
0.0001173
8.9e-05
6.76e-05
5.14e-05
3.92e-05
2.99e-05
2.29e-05
1.75e-05
1.34e-05
1.03e-05
7.9e-06
6.1e-06
4.7e-06
3.6e-06
2.8e-06
2.1e-06
1.6e-06
1.3e-06
1e-06
8e-07
6e-07
5e-07
4e-07
3e-07
2e-07
2e-07
1e-07
1e-07
1e-07
1e-07
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:48:30) 
-- CODE:
from math import*
cont=0
soma=0
exp=1
k=1
x=float(input("num1: "))
k=int(input("num2: "))
while((x>-1) and (x<1) and (k>0)):
	soma=soma+cont
	cont=cont+1
	exp=exp+2
	a=x**exp/exp
	print(round(a,7))
	
-- OUTPUT:
0.2349897
0.1116812
0.0631876
0.0389285
0.0252288
0.0169093
0.011608
0.008113
0.0057499
0.0041207
0.0029802
0.0021718
0.0015928
0.0011747
0.0008704
0.0006477
0.0004837
0.0003624
0.0002724
0.0002052
0.000155
0.0001173
8.9e-05
6.76e-05
5.14e-05
3.92e-05
2.99e-05
2.29e-05
1.75e-05
1.34e-05
1.03e-05
7.9e-06
6.1e-06
4.7e-06
3.6e-06
2.8e-06
2.1e-06
1.6e-06
1.3e-06
1e-06
8e-07
6e-07
5e-07
4e-07
3e-07
2e-07
2e-07
1e-07
1e-07
1e-07
1e-07
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:48:47) 
-- CODE:
from math import*
cont=0
soma=0
exp=1
k=1
x=float(input("num1: "))
k=int(input("num2: "))
while((x>-1) and (x<1) and (k>0)):
	soma=soma+cont
	cont=cont+1
	exp=exp+2
	a=x**exp/exp
	print(round(a,7))
	
-- OUTPUT:
0.2349897
0.1116812
0.0631876
0.0389285
0.0252288
0.0169093
0.011608
0.008113
0.0057499
0.0041207
0.0029802
0.0021718
0.0015928
0.0011747
0.0008704
0.0006477
0.0004837
0.0003624
0.0002724
0.0002052
0.000155
0.0001173
8.9e-05
6.76e-05
5.14e-05
3.92e-05
2.99e-05
2.29e-05
1.75e-05
1.34e-05
1.03e-05
7.9e-06
6.1e-06
4.7e-06
3.6e-06
2.8e-06
2.1e-06
1.6e-06
1.3e-06
1e-06
8e-07
6e-07
5e-07
4e-07
3e-07
2e-07
2e-07
1e-07
1e-07
1e-07
1e-07
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:49:07) 
-- CODE:
from math import*
cont=0
soma=0
exp=1
x=float(input("num1: "))
k=int(input("num2: "))
while((x>-1) and (x<1) and (k>0)):
	soma=soma+cont
	cont=cont+1
	exp=exp+2
	a=x**exp/exp
	print(round(a,7))
	
-- OUTPUT:
0.2349897
0.1116812
0.0631876
0.0389285
0.0252288
0.0169093
0.011608
0.008113
0.0057499
0.0041207
0.0029802
0.0021718
0.0015928
0.0011747
0.0008704
0.0006477
0.0004837
0.0003624
0.0002724
0.0002052
0.000155
0.0001173
8.9e-05
6.76e-05
5.14e-05
3.92e-05
2.99e-05
2.29e-05
1.75e-05
1.34e-05
1.03e-05
7.9e-06
6.1e-06
4.7e-06
3.6e-06
2.8e-06
2.1e-06
1.6e-06
1.3e-06
1e-06
8e-07
6e-07
5e-07
4e-07
3e-07
2e-07
2e-07
1e-07
1e-07
1e-07
1e-07
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:49:40) 
-- CODE:
from math import*
cont=0
soma=0
exp=1
x=float(input("num1: "))
k=int(input("num2: "))
while((x>-1) and (x<1) and (k>0)):
	soma=soma+cont
	cont=cont+1
	exp=exp+2
	a=x**exp/exp
	print(round(a,7))
else:
	print("FIM")
-- OUTPUT:
0.2349897
0.1116812
0.0631876
0.0389285
0.0252288
0.0169093
0.011608
0.008113
0.0057499
0.0041207
0.0029802
0.0021718
0.0015928
0.0011747
0.0008704
0.0006477
0.0004837
0.0003624
0.0002724
0.0002052
0.000155
0.0001173
8.9e-05
6.76e-05
5.14e-05
3.92e-05
2.99e-05
2.29e-05
1.75e-05
1.34e-05
1.03e-05
7.9e-06
6.1e-06
4.7e-06
3.6e-06
2.8e-06
2.1e-06
1.6e-06
1.3e-06
1e-06
8e-07
6e-07
5e-07
4e-07
3e-07
2e-07
2e-07
1e-07
1e-07
1e-07
1e-07
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:50:00) 
-- CODE:
from math import*
cont=0
soma=0
exp=1
x=float(input("num1: "))
k=int(input("num2: "))
while((x>-1) and (x<1) and (k>0)):
	soma=soma+cont
	cont=cont+1
	exp=exp+2
	a=x**exp/exp
	print(round(a,7))

-- OUTPUT:
0.2349897
0.1116812
0.0631876
0.0389285
0.0252288
0.0169093
0.011608
0.008113
0.0057499
0.0041207
0.0029802
0.0021718
0.0015928
0.0011747
0.0008704
0.0006477
0.0004837
0.0003624
0.0002724
0.0002052
0.000155
0.0001173
8.9e-05
6.76e-05
5.14e-05
3.92e-05
2.99e-05
2.29e-05
1.75e-05
1.34e-05
1.03e-05
7.9e-06
6.1e-06
4.7e-06
3.6e-06
2.8e-06
2.1e-06
1.6e-06
1.3e-06
1e-06
8e-07
6e-07
5e-07
4e-07
3e-07
2e-07
2e-07
1e-07
1e-07
1e-07
1e-07
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:50:16) 
-- CODE:
from math import*
cont=0
soma=0
exp=1
x=float(input("num1: "))
k=int(input("num2: "))
while((x>-1) and (x<1) and (k>0)):
	soma=soma+cont
	cont=cont+1
	exp=exp+2
	a=(x**exp)/exp
	print(round(a,7))

-- OUTPUT:
0.2349897
0.1116812
0.0631876
0.0389285
0.0252288
0.0169093
0.011608
0.008113
0.0057499
0.0041207
0.0029802
0.0021718
0.0015928
0.0011747
0.0008704
0.0006477
0.0004837
0.0003624
0.0002724
0.0002052
0.000155
0.0001173
8.9e-05
6.76e-05
5.14e-05
3.92e-05
2.99e-05
2.29e-05
1.75e-05
1.34e-05
1.03e-05
7.9e-06
6.1e-06
4.7e-06
3.6e-06
2.8e-06
2.1e-06
1.6e-06
1.3e-06
1e-06
8e-07
6e-07
5e-07
4e-07
3e-07
2e-07
2e-07
1e-07
1e-07
1e-07
1e-07
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:50:29) 
-- CODE:
from math import*
cont=0
soma=0
exp=1
x=float(input("num1: "))
k=int(input("num2: "))
while((x>-1) and (x<1) and (k>0)):
	soma=soma+cont
	cont=cont+1
	exp=exp+2
	a=(x**exp)/exp
	print(a)

-- OUTPUT:
0.23498966666666668
0.11168118898000001
0.06318762127932716
0.038928489300831697
0.025228846125154466
0.016909343013314104
0.011608038520733287
0.008112994687299563
0.005749850134777354
0.0041206985496850335
0.00298017877153547
0.0021717516365385866
0.001592818954909458
0.0011746600394124862
0.0008704192999787188
0.0006476737258456799
0.000483706794914228
0.00036243365753525953
0.00027236145910118273
0.0002052137306928738
0.00015498934045011254
0.00011731074294517706
8.896771865764605e-05
6.759494913448791e-05
5.144227453454835e-05
3.92097869547095e-05
2.9928687801486286e-05
2.287470611255528e-05
1.750484946728876e-05
1.3410981713431581e-05
1.0285605643297753e-05
7.896544284515961e-06
6.068140706040762e-06
4.667253260406919e-06
3.592792397495974e-06
2.7678823413974774e-06
2.1339745465510504e-06
1.6464167905744352e-06
1.271110872983276e-06
9.819865046507922e-07
7.590885823740396e-07
5.871264410138068e-07
4.543717538367597e-07
3.5182004899580306e-07
2.7255189903354096e-07
2.1124559881103
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:54:37) 
-- CODE:
from math import*
cont=0
soma=0
exp=1
x= float(input("num1: "))
k= int(input("num2: "))
while((x>-1) and (x<1) and (k>0)):
	soma= soma + cont
	cont= cont + 1
	exp= exp + 2
	a=(x ** exp) / (exp)
	print(round(a, 7)

-- ERROR:
File "XXXX", line 13
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:54:46) 
-- CODE:
from math import*
cont=0
soma=0
exp=1
x= float(input("num1: "))
k= int(input("num2: "))
while((x>-1) and (x<1) and (k>0)):
	soma= soma + cont
	cont= cont + 1
	exp= exp + 2
	a=(x ** exp) / (exp)
	print(round(a, 7)
-- ERROR:
File "XXXX", line 13
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:54:54) 
-- CODE:
from math import*
cont=0
soma=0
exp=1
x= float(input("num1: "))
k= int(input("num2: "))
while((x>-1) and (x<1) and (k>0)):
	soma= soma + cont
	cont= cont + 1
	exp= exp + 2
	a=(x ** exp) / (exp)
print(round(a, 7)
-- ERROR:
File "XXXX", line 13
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
